--- a/A01.html
+++ b/A01.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-    <head>
+<!DOCTYPE html><!--Etiqueta de tipo de documento. Se utiliza para definir el tipo de documento HTML-->
+<html lang="es"><!--Etiqueta de apertura del documento HTML. Se utiliza para definir el idioma del documento-->
+    <head><!--Etiqueta de encabezado. Se utiliza para definir el encabezado de la página-->
         <meta charset="UTF-8"> <!--Establece el juego de caracteres que utilizará el navegador-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Establece el área de visualización de la página en el navegador
                                                                                 width=device-width: hace que el ancho de la página coincida con 
@@ -15,26 +15,25 @@
                                                                                 por los motores de búsqueda para establecer búsquedas y categorías 
                                                                                 de los documentos.-->
 
-        <title>Diario! Diario!</title>
-    </head>
-    <body>
+        <title>Diario! Diario!</title><!--Etiqueta de título. Se utiliza para definir el título de la página que se mostrará en la pestaña del navegador.-->
+    </head><!--Etiqueta de encabezado. Se utiliza para definir el encabezado de la página-->
+    <body><!--Etiqueta de cuerpo. Se utiliza para definir el cuerpo del documento HTML-->
         <h1>Extra! Extra!</h1> <!--Encabezado de nivel 1. Se utiliza para el título principal de la página.-->
             <p>Estamos Tratando de mandar algo y que salga bien de una!</p> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->
             <p>No sabemos si saldra algo</p> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->
             <p>Pero lo intentamos</p> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->
             <p>Esto es una prueba de HTML</p> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->
-    
         <h2>Noticias Politicas</h2> <!--Encabezado de nivel 2. Se utiliza para subtítulos o secciones secundarias dentro de la página.-->
             <h3>NO ROBAMOS NADA!</h3> <!--Encabezado de nivel 3. Se utiliza para subtítulos o secciones secundarias dentro de la página.-->            
                 <p>dijeron...</p> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->
                 <p>Piden prestado por tiempo indeterminado</p> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->
-        
         <h2>Noticias Deportivas</h2> <!--Encabezado de nivel 2. Se utiliza para subtítulos o secciones secundarias dentro de la página.-->
             <h3>Corrio alguien en algun lado</h3> <!--Encabezado de nivel 3. Se utiliza para subtítulos o secciones secundarias dentro de la página.-->            
                 <p>dicen que llegaba tarde</p> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->    
-        </body>
+        </body><!--Etiqueta de cuerpo. Se utiliza para definir el cuerpo del documento HTML-->
     <footer> <!--Etiqueta de pie de página. Se utiliza para definir el pie de la página.-->
             <h4>Diario Slsticio de verano</h4> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->
             <p>copiright 2025</p> <!--Párrafo de texto. Se utiliza para mostrar un bloque de texto en la página.-->
     </footer> <!--Etiqueta de pie de página. Se utiliza para definir el pie de la página.-->
-</html>
+</html><!--Etiqueta de cierre del documento HTML. Se utiliza para cerrar el documento HTML.-->
+<!-- Fin del código HTML -->
