--- a/A02.html
+++ b/A02.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-    <head>
+<!DOCTYPE html><!--Etiqueta de tipo de documento. Se utiliza para definir el tipo de documento HTML.-->
+<html lang="es"><!--Etiqueta de apertura del documento HTML. Se utiliza para definir el idioma del documento.-->
+    <head><!--Etiqueta de encabezado. Se utiliza para definir el encabezado de la página.-->
         <meta charset="UTF-8"> <!--Establece el juego de caracteres que utilizará el navegador-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Establece el área de visualización de la página en el navegador
                                                                                 width=device-width: hace que el ancho de la página coincida con 
@@ -14,14 +14,14 @@
                                                                                 en la cual el documento web puede ser incluido. Suele ser utilizada
                                                                                 por los motores de búsqueda para establecer búsquedas y categorías 
                                                                                 de los documentos.-->
-
-        <title>Viajando de aquí para allá</title>
-    </head>
-    <body>
+        <title>Viajando de aquí para allá</title><!--Etiqueta de título. Se utiliza para definir el título de la página que se mostrará en la pestaña del navegador.-->
+    </head><!--Etiqueta de encabezado. Se utiliza para definir el encabezado de la página.-->
+    <body><!--Etiqueta de cuerpo. Se utiliza para definir el cuerpo del documento HTML.-->
         <a href="./pagina1.html">Ir a pagina1.html</a> <!--Etiqueta de anclaje. Se utiliza para crear un enlace a otra página web o recurso.-->
         <br> <!--Etiqueta de salto de línea. Se utiliza para crear un salto de línea en el texto.-->
         <a href="./pagina2.html">Ir a pagina2.html</a> <!--Etiqueta de anclaje. Se utiliza para crear un enlace a otra página web o recurso.-->
-        </body>
+        </body><!--Etiqueta de cuerpo. Se utiliza para definir el cuerpo del documento HTML.-->
     <footer> <!--Etiqueta de pie de página. Se utiliza para definir el pie de la página.-->
-    </footer>
-</html>
+    </footer><!--Etiqueta de pie de página. Se utiliza para definir el pie de la página.-->
+</html><!--Etiqueta de cierre del documento HTML. Se utiliza para cerrar el documento HTML.-->
+<!-- Compare this snippet from A08.html: -->
